# novel_engine

./: .gitignore  LICENSE  README.md
android/: build.gradle.kts
android-new/: README.md  gradle.properties  settings.gradle.kts
android-new/app/: build.gradle.kts  proguard-rules.pro
android-new/app/src/main/: AndroidManifest.xml
android-new/app/src/main/assets/story/: chapter3.json  manifest.json
android-new/app/src/main/cpp/: CMakeLists.txt  novel_engine_jni.c
android-new/app/src/main/java/com/deadboizxc/tuinovel/engine/: ActionExecutor.kt  NativeEngine.kt  StoryLoader.kt
android-new/app/src/main/java/com/deadboizxc/tuinovel/ui/components/: AnimatedText.kt
android-new/app/src/main/java/com/deadboizxc/tuinovel/ui/effects/: PsychoEffects.kt  PsychoTriggers.kt
android-new/app/src/main/java/com/deadboizxc/tuinovel/ui/screens/: AdditionalScreens.kt  SettingsScreen.kt
android-new/app/src/main/java/com/deadboizxc/tuinovel/ui/theme/: Theme.kt  Type.kt
android-new/app/src/main/res/drawable/: ic_launcher_foreground.xml
android-new/app/src/main/res/values/: strings.xml  themes.xml
android-new/app/src/main/res/xml/: backup_rules.xml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/story/: chapter2.json  endings.json  prologue.json
android/app/src/main/java/com/deadboizxc/tuinovel/: MainActivity.kt  TuiNovelApp.kt
android/app/src/main/java/com/deadboizxc/tuinovel/engine/: ConditionChecker.kt  GameState.kt  SceneManager.kt
android/app/src/main/java/com/deadboizxc/tuinovel/ui/components/: TerminalInput.kt
android/app/src/main/java/com/deadboizxc/tuinovel/ui/screens/: MainMenuScreen.kt  TerminalScreen.kt
android/app/src/main/java/com/deadboizxc/tuinovel/ui/theme/: Color.kt
android/app/src/main/res/values/: colors.xml
android/app/src/main/res/xml/: data_extraction_rules.xml
android/gradle/: libs.versions.toml
app-template/: README.md  build.gradle.kts  gradlew.bat  settings.gradle.kts
app-template/app/: build.gradle.kts  proguard-rules.pro
app-template/app/src/main/: AndroidManifest.xml
app-template/app/src/main/java/com/deadboizxc/template/: MainActivity.kt  TemplateApp.kt
app-template/app/src/main/java/com/deadboizxc/template/ui/components/: Components.kt
app-template/app/src/main/java/com/deadboizxc/template/ui/screens/: DetailScreen.kt  HomeScreen.kt  Navigation.kt  SettingsScreen.kt
app-template/app/src/main/java/com/deadboizxc/template/ui/theme/: Color.kt  Theme.kt  Type.kt
app-template/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app-template/app/src/main/res/values/: colors.xml  themes.xml
bindings/kotlin/jni/: CMakeLists.txt  novel_engine_jni.c
bindings/python/: pyproject.toml
bindings/python/novel_engine/: __init__.py  engine.py  tui.py
core/: CMakeLists.txt
core/include/: internal.h  novel_engine.h
core/src/: actions.c  conditions.c  engine.c  scene.c  state.c  story.c
core/tests/: test_engine.c
docs/: API.md  BUILDING.md  STORY_FORMAT.md
gui/: build.gradle.kts  settings.gradle.kts
gui/android/src/main/: AndroidManifest.xml
gui/android/src/main/kotlin/com/novelengine/android/: MainActivity.kt
gui/android/src/main/res/values/: colors.xml  strings.xml  themes.xml
gui/desktop/src/jvmMain/kotlin/: Main.kt
gui/shared/src/androidMain/kotlin/com/novelengine/engine/: NovelEngine.android.kt
gui/shared/src/commonMain/kotlin/com/novelengine/engine/: GameState.kt  NovelEngine.kt
gui/shared/src/commonMain/kotlin/com/novelengine/theme/: NovelTheme.kt
gui/shared/src/commonMain/kotlin/com/novelengine/ui/components/: ChoiceButton.kt  StatusBar.kt  TextDisplay.kt
gui/shared/src/commonMain/kotlin/com/novelengine/ui/effects/: Effects.kt  TypewriterEffect.kt
gui/shared/src/commonMain/kotlin/com/novelengine/ui/screens/: GameScreen.kt  MenuScreen.kt
gui/shared/src/desktopMain/kotlin/com/novelengine/engine/: NovelEngine.desktop.kt
stories/blue_frequency/: chapter1.json
